few corrections in spacing between tv and interviews

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -791,41 +791,46 @@ section.carousel > ul li:nth-child(5) {
   }
 }
 section.tv-mst {
-  padding: 10px;
-  padding-top: 30px;
-  clear: both;
-  display: inline-block;
-  width: 60%;
+  display: block;
 }
-section.tv-mst > article.headline > h1 {
-  font-size: 1.8em;
-}
-section.tv-mst > article.headline > figure {
-  height: auto;
-  max-height: 300px;
-  max-width: 100%;
-}
-section.tv-mst > article.headline > figure iframe {
-  height: 300px;
+@media (min-width: 768px) {
+  section.tv-mst {
+    padding: 20px;
+    padding-left: 0;
+    clear: both;
+    display: inline-block;
+    width: 60%;
+  }
+  section.tv-mst > article.headline > h1 {
+    font-size: 1.5em;
+  }
+  section.tv-mst > article.headline > figure {
+    height: auto;
+    max-height: 300px;
+    max-width: 100%;
+  }
+  section.tv-mst > article.headline > figure iframe {
+    height: 300px;
+  }
 }
 section.interviews {
-  padding-top: 30px;
-  display: inline-block;
-  vertical-align: top;
-  width: 39%;
-  border-top: 1px solid;
-}
-section.interviews > ul > li > article.headline > h1 {
-  margin-top: 15px;
-  font-size: 1em;
-}
-section.interviews > article.headline > figure {
-  height: 100px;
-  max-width: 100%;
+  display: block;
 }
 @media (min-width: 768px) {
   section.interviews {
-    border-top: 0;
+    padding: 20px;
+    padding-right: 0;
+    display: inline-block;
+    vertical-align: top;
+    width: 39%;
+  }
+  section.interviews > ul > li > article.headline > h1 {
+    margin-top: 15px;
+    font-size: 1em;
+  }
+  section.interviews > article.headline > figure {
+    height: 100px;
+    max-width: 100%;
   }
 }
 section.debate {
