--- a/assets/less/_includes/home/interviews.less
+++ b/assets/less/_includes/home/interviews.less
@@ -1,22 +1,22 @@
 section.interviews {
-  padding-top: 30px;
-  display: inline-block;
-  vertical-align: top;
-  width: 39%;
-  border-top: 1px solid;
+  display: block;
 
-  & > ul > li > article.headline > h1 { 
-    margin-top: 15px;
-    font-size: 1em;
-  }
+  @media(min-width: @screen-sm) { 
+    padding: 20px;
+    padding-right: 0;
+    display: inline-block;
+    vertical-align: top;
+    width: 39%;
 
-  & > article.headline > figure { 
-    height: 100px;
-    max-width: 100%;
-  }
+    & > ul > li > article.headline > h1 { 
+      margin-top: 15px;
+      font-size: 1em;
+    }
 
-  @media (min-width: @screen-sm) {
-    border-top: 0;
+    & > article.headline > figure { 
+      height: 100px;
+      max-width: 100%;
+    }
   }
 }
 
